--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>AHTOHALLAN</title>
+    <style>
+    h1 {
+      color:black;
+      font-size:60px;
+      border-bottom:5px solid red;
+    }
+    li {
+      font-size:40px;
+      margin-bottom:10px
+    }
+  </style>
   </head>
 
 
@@ -15,7 +26,7 @@
         </li>
         <!-- 우리동네 관련된 고민들 -->
       <li>
-        맛있는 아침
+        <a href="/Users/conan/Documents/Github/web001/breakfast01.html">맛있는 아침</a>
         </li>
         <!-- 아침식사 노하우 -->
       <li>
