--- a/breakfast01.html
+++ b/breakfast01.html
@@ -20,5 +20,8 @@
     <li>Morning roll with something</li>
     <li>Fancakes</li>
     </ol>
+
+<img src="img/pancake001.jpg" width="300px">
+
   </body>
 </html>
