--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
       border-bottom:5px solid red;
     }
     li {
-      font-size:40px;
-      margin-bottom:10px
+      font-size:50px;
+      margin-bottom:10px;
+    }
+
+    p {
+      font-size:20px;
+      margin-top:10px;
     }
   </style>
+
+
   </head>
 
 
@@ -22,17 +29,31 @@
 
     <ol>
       <li>
-        <a>우리동네이야기</a>
+        <a href="town01.html"> 우리동네이야기 </a>
         </li>
         <!-- 우리동네 관련된 고민들 -->
       <li>
-        <a href="/Users/conan/Documents/Github/web001/breakfast01.html">맛있는 아침</a>
+        <a href="breakfast01.html">맛있는 아침</a>
         </li>
         <!-- 아침식사 노하우 -->
       <li>
-        맛있는 요리
+        <a href="cooking.html"> 맛있는 요리 </a>
         </li>
         <!-- 기타 요리 노하우 -->
+      <li>
+        <a href="Astory.html"> 이야기한편 </a>
+        </li>
+          <!-- 이야기 한편 -->
       </ol>
+
+      <p>
+        웹사이트를 만는 이유는 내가 개발하고 싶은 툴들이 웹을 기반으로 동작하여 <strong>접근성</strong>이 우수하도록 하기 위해서임. 그래서 웹의 기본 구성 요소인 서버/클라이언트 통신과 html, css, database를 공부하고자 함... 많이는 말고....
+      </p>
+      <p>
+        파이썬을 공부하는 이유는 일상의 효율을 올려주는 도구를 개발하기 위한 수단으로 필요할 것 같아서.일상의 데이터 관리 툴인 엑셀의 사용자화 및 자동화, 다른 소프트웨어들의 사용자화. 나만의 앱 개발 등등
+      </P>
+
+
+
   </body>
 </html>
