--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
       border-bottom:5px solid red;
     }
     li {
-      font-size:50px;
+      font-size:40px;
       margin-bottom:10px;
+      margin-left:150;
     }
 
     p {
-      font-size:20px;
+      font-size:30px;
       margin-top:10px;
     }
   </style>
