practice makes perfect

--- a/breakfast01.html
+++ b/breakfast01.html
@@ -23,5 +23,13 @@
 
 <img src="img/pancake001.jpg" width="300px">
 
+    <h2>Morning rolls</h2>
+    <p><strong>속에 넣는 것</strong></p>
+
+    <p>
+      배이스 : 달걀, 마요네즈, 간 피클<br>
+      첨가 : 양파, (표고/양송이), 베이컨, 치즈<br> 
+
+    </p>
   </body>
 </html>
