--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </ol>
 
       <p>
-        웹사이트를 만는 이유는 내가 개발하고 싶은 툴들이 웹을 기반으로 동작하여 <strong>접근성</strong>이 우수하도록 하기 위해서임. 그래서 웹의 기본 구성 요소인 서버/클라이언트 통신과 html, css, database를 공부하고자 함... 많이는 말고....
+        <span>웹사이트를 만는 이유</span>는 내가 개발하고 싶은 툴들이 웹을 기반으로 동작하여 <strong>접근성</strong>이 우수하도록 하기 위해서임. 그래서 웹의 기본 구성 요소인 서버/클라이언트 통신과 html, css, database를 공부하고자 함... 많이는 말고....
       </p>
       <p>
         파이썬을 공부하는 이유는 일상의 효율을 올려주는 도구를 개발하기 위한 수단으로 필요할 것 같아서.일상의 데이터 관리 툴인 엑셀의 사용자화 및 자동화, 다른 소프트웨어들의 사용자화. 나만의 앱 개발 등등
