--- a/cooking.html
+++ b/cooking.html
@@ -8,6 +8,6 @@
     <img src="steak001.jpg" width="300">
     <p>너무할 정도로 많이 먹게 되는 고기... 이유없이 사람들이 그렇게나 많이 먹는 것은 아니다. 조리의 간편함에 비해 비할 수 없는 맛! 엄청난 포만감까지... 이를 마다할 사람이 어디있을까? 과거 식량부족을 가축사육이 힘든 시절도 귀해서 못 먹었지 싫어서 안 먹은 사람은 없다는 것이 동서 고금에 전해지는 상식이다</p>
 
-
+<a href="index.html"> 처음으로 </a>
   </body>
 </html>
