--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
       color:black;
       font-size:60px;
       border-bottom:5px solid red;
+      text-align:center;
     }
     li {
       font-size:40px;
       margin-bottom:10px;
       margin-left:150;
+    }
+    a {
+      text-align:right;
     }
 
     p {
